설정: 프로젝트 개발 환경 세팅
- Prettier 코드 포맷팅 자동화
- TypeScript 경로 별칭 (alias) 설정 (@/*)
- VS Code 저장 시 자동 포맷팅 (프리티어 자동 적용)

## 기타
- router 파일 분리

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
-    /* Paths */
+    /* Path mapping */
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
